# Anji

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  pdf_to_markdown.py  pyproject.toml  requirements.txt  vlm_client.py
anji/: __init__.py  __main__.py  ast_handler.py  cli.py  enhancement.py  exporters.py  main.py  pdf_converter.py  pipeline.py
chinvat/: __init__.py  __main__.py  ast_handler.py  cli.py  enhancement.py  exporters.py  image_analyzer.py  main.py  pdf_converter.py  pipeline.py
